--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.datasource.initialization-mode=always
 #spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
 
-jwt.expiration = 604800
-jwt.secret = mH6U7DlOO0
+auth.expiration = 604800
+auth.secret = mH6U7DlOO0
