Adding Configuration + Audit Controller + User Password Ignore

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-server.port=8090
+server.port=8095
+spring.application.name=user-service
+
 org.hibernate.envers.audit_table_suffix=AUDIT_LOG
 #spring.main.allow-bean-definition-overriding=true
 
