--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#server.port=8095
+server.port=8095
 org.hibernate.envers.audit_table_suffix=AUDIT_LOG
 #spring.main.allow-bean-definition-overriding=true
 
